fix(publish,review): prevent code to overflow from viewport
This uses `anywhere` instead of `word-break`. It considers soft wrap opportunities.
This is done based on `min-content` intrinsic sizes which can be read upon [here](https://blog.logrocket.com/understanding-min-content-max-content-fit-content-css/).

--- a/packages/common-assets/styles/scss/content.scss
+++ b/packages/common-assets/styles/scss/content.scss
@@ -8,6 +8,9 @@
 .main-content {
   line-height: $content-line-height;
 
+  /* to protect the layout to break from long words */
+  overflow-wrap: break-word;
+
   ol,
   ul,
   dl,
@@ -244,7 +247,7 @@ a.fn {
   margin-left: 1rem;
 }
 
-.table-responsible {
+.table-responsive {
   overflow-x: auto;
   -webkit-overflow-scrolling: touch;
 }
